<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Deal Price</string>
    <string name="description_hint">Description</string>
    <string name="save_text">Save</string>
    <string name="text_add_new_deal">Add New Deal</string>
    <string name="text_delete_deal">Delete Deal</string>
    <string name="text_logout">LogOut</string>
    <string name="text_upload_image">Upload Image</string>
    <string name="deal_title">Deal Title:</string>
    <string name="text_deal_price">Deal Price:</string>
    <string name="text_description">Description:</string>
</resources>
